# Tugas-P.Mobile

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_project_muhammad_raihan/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart
linux/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
macos/: Flutter-Debug.xcconfig  Flutter-Release.xcconfig  GeneratedPluginRegistrant.swift
